Revert to JDTLS separate-process approach (original plan)
Per @sunix's decision: revert the in-process JDT Core / JavaParser
changes and go back to the JDTLS-as-external-process approach from
b619096. Also carries forward the maven.compiler.release 25→17 fix
so the project builds on JDK 17/21.

Co-authored-by: sunix <650571+sunix@users.noreply.github.com>