@@ -1,318 +1,384 @@
 package org.sunix;
 
+import jakarta.annotation.PreDestroy;
 import jakarta.enterprise.context.ApplicationScoped;
-import org.eclipse.jdt.core.JavaCore;
-import org.eclipse.jdt.core.compiler.IProblem;
-import org.eclipse.jdt.core.dom.*;
+import org.eclipse.lsp4j.*;
+import org.eclipse.lsp4j.jsonrpc.Launcher;
+import org.eclipse.lsp4j.launch.LSPLauncher;
+import org.eclipse.lsp4j.services.LanguageClient;
+import org.eclipse.lsp4j.services.LanguageServer;
+import org.eclipse.microprofile.config.inject.ConfigProperty;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.PathMatcher;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
+import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 import java.util.logging.Logger;
-import java.util.stream.Stream;
 
-/**
- * In-process Java analysis service using Eclipse JDT Core APIs.
- * <p>
- * Runs the Eclipse Java compiler and DOM AST parser inside the same JVM as the
- * MCP server — no external JDTLS process is needed.  Uses the same JDT Core
- * libraries that power Eclipse IDE and JDTLS but without the OSGi/LSP overhead.
- * Provides workspace management, diagnostics and symbol extraction for Java
- * source files.  More features (type resolution, code completion, …) can be
- * added incrementally.
- */
 @ApplicationScoped
 public class JdtlsConnectionService {
 
     private static final Logger LOG = Logger.getLogger(JdtlsConnectionService.class.getName());
 
-    /** JDT AST language level matching the compiler options. */
-    private static final int JLS_LEVEL = AST.JLS17;
+    @ConfigProperty(name = "jdtls.install.path", defaultValue = "")
+    Optional<String> jdtlsInstallPath;
 
-    /** Compiler options shared across all parse calls. */
-    private static final Map<String, String> COMPILER_OPTIONS = Map.of(
-            JavaCore.COMPILER_SOURCE, "17",
-            JavaCore.COMPILER_COMPLIANCE, "17",
-            JavaCore.COMPILER_CODEGEN_TARGET_PLATFORM, "17"
-    );
-
-    private boolean initialized = false;
+    private LanguageServer languageServer;
+    private Process jdtlsProcess;
+    private Future<?> listenerFuture;
+    private boolean connected = false;
     private String currentWorkspaceRoot;
 
-    public boolean isInitialized() {
-        return initialized;
+    public boolean isConnected() {
+        return connected && jdtlsProcess != null && jdtlsProcess.isAlive();
     }
 
     public String getCurrentWorkspace() {
         return currentWorkspaceRoot;
     }
 
-    // -------------------------------------------------------------------------
-    // Workspace management
-    // -------------------------------------------------------------------------
-
     /**
-     * Validate and register a workspace directory.  The directory must exist
-     * and contain a {@code pom.xml} or {@code build.gradle(.kts)} file.
+     * Start the Eclipse JDT Language Server process and connect to it via LSP4J.
+     * The JDTLS home directory is resolved from the {@code jdtls.install.path}
+     * configuration property, the system PATH, or common installation locations.
      */
-    public String initializeWorkspace(String workspacePath) {
-        File workspaceDir = new File(workspacePath);
-        if (!workspaceDir.exists() || !workspaceDir.isDirectory()) {
-            return "Invalid workspace path: " + workspacePath;
+    public CompletableFuture<String> startJdtls() {
+        if (isConnected()) {
+            return CompletableFuture.completedFuture(
+                    "JDTLS is already running. PID: " + jdtlsProcess.pid());
         }
 
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                String jdtlsHome = findJdtlsHome();
+                if (jdtlsHome == null) {
+                    return "JDTLS not found. Please install jdtls and either:\n"
+                            + "  • set 'jdtls.install.path' in application.properties, or\n"
+                            + "  • ensure the 'jdtls' launch script is on your PATH, or\n"
+                            + "  • install to ~/.local/share/jdtls, /usr/local/jdtls, or /opt/jdtls.";
+                }
+
+                Path launcherJar = findLauncherJar(jdtlsHome);
+                if (launcherJar == null) {
+                    return "JDTLS launcher JAR not found under: " + jdtlsHome + "/plugins/";
+                }
+
+                Path configDir = findConfigDir(jdtlsHome);
+                if (configDir == null) {
+                    return "JDTLS config directory not found in: " + jdtlsHome;
+                }
+
+                // Each JDTLS instance needs its own workspace-data directory for OSGi state
+                Path workspaceData = Files.createTempDirectory("jdtls-workspace-data-");
+
+                List<String> command = buildJdtlsCommand(launcherJar, configDir, workspaceData);
+                LOG.info("Starting JDTLS with command: " + String.join(" ", command));
+
+                ProcessBuilder pb = new ProcessBuilder(command);
+                pb.redirectErrorStream(false);
+                jdtlsProcess = pb.start();
+                LOG.info("JDTLS process started. PID: " + jdtlsProcess.pid());
+
+                // Redirect stderr so the process does not block on full pipe buffer
+                Thread stderrReader = new Thread(() -> {
+                    try {
+                        jdtlsProcess.getErrorStream().transferTo(System.err);
+                    } catch (IOException ignored) {
+                    }
+                }, "jdtls-stderr");
+                stderrReader.setDaemon(true);
+                stderrReader.start();
+
+                // Connect via LSP4J over the process stdin/stdout streams
+                SimpleLanguageClient client = new SimpleLanguageClient();
+                Launcher<LanguageServer> launcher = new LSPLauncher.Builder<LanguageServer>()
+                        .setLocalService(client)
+                        .setRemoteInterface(LanguageServer.class)
+                        .setInput(jdtlsProcess.getInputStream())
+                        .setOutput(jdtlsProcess.getOutputStream())
+                        .create();
+
+                languageServer = launcher.getRemoteProxy();
+                listenerFuture = launcher.startListening();
+                connected = true;
+
+                return "JDTLS started successfully. PID: " + jdtlsProcess.pid()
+                        + ". Use initializeWorkspace(<path>) to open a Java project.";
+            } catch (Exception e) {
+                LOG.severe("Failed to start JDTLS: " + e.getMessage());
+                return "Failed to start JDTLS: " + e.getMessage();
+            }
+        });
+    }
+
+    /**
+     * Gracefully shut down the running JDTLS process.
+     * Sends the LSP {@code shutdown} request first, then {@code exit}, and finally
+     * force-destroys the process if it does not exit within the timeout.
+     */
+    public CompletableFuture<String> stopJdtls() {
+        if (!isConnected()) {
+            return CompletableFuture.completedFuture("JDTLS is not running.");
+        }
+
+        return CompletableFuture.supplyAsync(() -> {
+            long pid = jdtlsProcess.pid();
+            try {
+                // Graceful LSP shutdown sequence
+                languageServer.shutdown().get(5, TimeUnit.SECONDS);
+                languageServer.exit();
+                jdtlsProcess.waitFor(3, TimeUnit.SECONDS);
+            } catch (Exception e) {
+                LOG.warning("Graceful JDTLS shutdown failed, force-destroying: " + e.getMessage());
+            }
+
+            jdtlsProcess.destroyForcibly();
+            if (listenerFuture != null) {
+                listenerFuture.cancel(true);
+            }
+
+            connected = false;
+            languageServer = null;
+            jdtlsProcess = null;
+            listenerFuture = null;
+            currentWorkspaceRoot = null;
+
+            return "JDTLS stopped. PID was: " + pid;
+        });
+    }
+
+    /**
+     * Register a workspace directory with JDTLS and perform the LSP initialize
+     * handshake. When JDTLS is not yet running the workspace path is recorded so
+     * it can be used once {@link #startJdtls()} is called.
+     */
+    public CompletableFuture<String> initializeWorkspace(String workspacePath) {
+        // Validate workspace path
+        File workspaceDir = new File(workspacePath);
+        if (!workspaceDir.exists() || !workspaceDir.isDirectory()) {
+            return CompletableFuture.completedFuture("Invalid workspace path: " + workspacePath);
+        }
+
+        // Check if it's a valid Java project (has pom.xml or build.gradle)
         File pomFile = new File(workspaceDir, "pom.xml");
         File gradleFile = new File(workspaceDir, "build.gradle");
         File gradleKtsFile = new File(workspaceDir, "build.gradle.kts");
 
         if (!pomFile.exists() && !gradleFile.exists() && !gradleKtsFile.exists()) {
-            return "Not a valid Java project. Missing pom.xml or build.gradle in: " + workspacePath;
+            return CompletableFuture.completedFuture(
+                    "Not a valid Java project. Missing pom.xml or build.gradle in: " + workspacePath);
         }
 
         currentWorkspaceRoot = workspacePath;
-        initialized = true;
         String projectType = pomFile.exists() ? " (Maven project)" : " (Gradle project)";
 
-        List<Path> javaFiles = listJavaFiles();
-        return "Workspace initialized: " + workspacePath + projectType
-                + ". Found " + javaFiles.size() + " Java source file(s).";
-    }
+        if (!isConnected()) {
+            return CompletableFuture.completedFuture(
+                    "Workspace initialized: " + workspacePath + projectType
+                            + ". Note: JDTLS is not running. Use startJdtls() to start it.");
+        }
 
-    // -------------------------------------------------------------------------
-    // Server info
-    // -------------------------------------------------------------------------
+        return sendInitializeRequest(workspacePath)
+                .thenApply(result -> "Workspace initialized with JDTLS: " + workspacePath
+                        + projectType + ". " + result);
+    }
 
     /**
-     * Return a human-readable status summary of the analysis service.
+     * Return a human-readable status summary of the JDTLS process.
      */
-    public String getServerInfo() {
-        if (!initialized) {
-            return "Java analysis service is ready. No workspace set — use initializeWorkspace(<path>).";
+    public CompletableFuture<String> getServerInfo() {
+        if (!isConnected()) {
+            if (currentWorkspaceRoot != null) {
+                return CompletableFuture.completedFuture(
+                        "Workspace set: " + currentWorkspaceRoot + ", but JDTLS is not running. Use startJdtls().");
+            }
+            return CompletableFuture.completedFuture(
+                    "JDTLS is not running. Use startJdtls() to start it.");
         }
-        List<Path> javaFiles = listJavaFiles();
-        return "Java analysis service running (in-process, JDT Core). Workspace: " + currentWorkspaceRoot
-                + ". Java files: " + javaFiles.size() + ".";
+
+        return CompletableFuture.completedFuture(
+                "JDTLS running. PID: " + jdtlsProcess.pid()
+                        + ". Workspace: " + (currentWorkspaceRoot != null ? currentWorkspaceRoot : "not set"));
     }
-
-    // -------------------------------------------------------------------------
-    // Diagnostics (compiler-level)
-    // -------------------------------------------------------------------------
-
-    /**
-     * Parse a Java source file using the Eclipse compiler and return any
-     * problems found (syntax errors, type errors when bindings are available).
-     *
-     * @param filePath absolute path, or relative to the workspace root
-     */
-    public String getDiagnostics(String filePath) {
-        Path path = resolveFilePath(filePath);
-        if (path == null) {
-            return "File not found: " + filePath;
-        }
-
-        try {
-            char[] source = Files.readString(path).toCharArray();
-            CompilationUnit cu = parseSource(source, path.getFileName().toString());
-
-            IProblem[] problems = cu.getProblems();
-            if (problems.length == 0) {
-                return "No issues found in: " + path.getFileName();
-            }
-
-            StringBuilder sb = new StringBuilder();
-            sb.append(problems.length)
-              .append(" issue(s) in ").append(path.getFileName()).append(":\n");
-            for (IProblem p : problems) {
-                sb.append("  [").append(p.isError() ? "ERROR" : "WARNING")
-                  .append("] line ").append(p.getSourceLineNumber())
-                  .append(": ").append(p.getMessage()).append("\n");
-            }
-            return sb.toString().stripTrailing();
-        } catch (IOException e) {
-            return "Error reading file: " + e.getMessage();
-        }
-    }
-
-    // -------------------------------------------------------------------------
-    // Symbol extraction
-    // -------------------------------------------------------------------------
-
-    /**
-     * Parse a Java source file and return the declared symbols (packages,
-     * types, methods, fields, constructors) using the JDT Core DOM AST.
-     *
-     * @param filePath absolute path, or relative to the workspace root
-     */
-    public String getSymbols(String filePath) {
-        Path path = resolveFilePath(filePath);
-        if (path == null) {
-            return "File not found: " + filePath;
-        }
-
-        try {
-            char[] source = Files.readString(path).toCharArray();
-            CompilationUnit cu = parseSource(source, path.getFileName().toString());
-
-            // If there are hard errors, we can still try to extract symbols
-            // (JDT Core recovers partial ASTs) but warn the user.
-            IProblem[] errors = cu.getProblems();
-            boolean hasErrors = false;
-            for (IProblem p : errors) {
-                if (p.isError()) { hasErrors = true; break; }
-            }
-
-            StringBuilder sb = new StringBuilder();
-            sb.append("Symbols in ").append(path.getFileName()).append(":\n");
-
-            if (hasErrors) {
-                sb.append("  (file has errors — symbols may be incomplete)\n");
-            }
-
-            PackageDeclaration pkg = cu.getPackage();
-            if (pkg != null) {
-                sb.append("  Package: ").append(pkg.getName()).append("\n");
-            }
-
-            for (Object imp : cu.imports()) {
-                ImportDeclaration id = (ImportDeclaration) imp;
-                sb.append("  Import: ").append(id.getName())
-                  .append(id.isOnDemand() ? ".*" : "").append("\n");
-            }
-
-            cu.accept(new ASTVisitor() {
-                @Override
-                public boolean visit(TypeDeclaration node) {
-                    sb.append("  ").append(node.isInterface() ? "Interface" : "Class")
-                      .append(": ").append(node.getName()).append("\n");
-                    return true;
-                }
-
-                @Override
-                public boolean visit(EnumDeclaration node) {
-                    sb.append("  Enum: ").append(node.getName()).append("\n");
-                    return true;
-                }
-
-                @Override
-                public boolean visit(FieldDeclaration node) {
-                    for (Object frag : node.fragments()) {
-                        VariableDeclarationFragment v = (VariableDeclarationFragment) frag;
-                        sb.append("    Field: ").append(v.getName())
-                          .append(" : ").append(node.getType()).append("\n");
-                    }
-                    return false;
-                }
-
-                @Override
-                public boolean visit(MethodDeclaration node) {
-                    if (node.isConstructor()) {
-                        sb.append("    Constructor: ").append(node.getName())
-                          .append("(").append(formatParams(node)).append(")\n");
-                    } else {
-                        sb.append("    Method: ").append(node.getName())
-                          .append("(").append(formatParams(node)).append(")")
-                          .append(" : ").append(node.getReturnType2()).append("\n");
-                    }
-                    return false;
-                }
-            });
-
-            return sb.toString().stripTrailing();
-        } catch (IOException e) {
-            return "Error reading file: " + e.getMessage();
-        }
-    }
-
-    // -------------------------------------------------------------------------
-    // JDT Core helpers
-    // -------------------------------------------------------------------------
-
-    /**
-     * Create a JDT Core {@link ASTParser}, parse the given source and return
-     * the resulting {@link CompilationUnit}.
-     * <p>
-     * Package-private so tests in the same package can verify parsing directly.
-     */
-    CompilationUnit parseSource(char[] source, String unitName) {
-        ASTParser parser = ASTParser.newParser(JLS_LEVEL);
-        parser.setSource(source);
-        parser.setKind(ASTParser.K_COMPILATION_UNIT);
-        parser.setResolveBindings(false);
-        parser.setStatementsRecovery(true);
-        parser.setBindingsRecovery(true);
-        parser.setEnvironment(null, null, null, true);
-        parser.setUnitName(unitName);
-        parser.setCompilerOptions(COMPILER_OPTIONS);
-        return (CompilationUnit) parser.createAST(null);
-    }
-
-    /** Format method parameters as a comma-separated string. */
-    private static String formatParams(MethodDeclaration method) {
-        List<?> params = method.parameters();
-        if (params.isEmpty()) return "";
-        StringBuilder sb = new StringBuilder();
-        for (int i = 0; i < params.size(); i++) {
-            SingleVariableDeclaration p = (SingleVariableDeclaration) params.get(i);
-            if (i > 0) sb.append(", ");
-            sb.append(p.getType()).append(" ").append(p.getName());
-        }
-        return sb.toString();
-    }
-
-    // -------------------------------------------------------------------------
-    // Workspace helpers
-    // -------------------------------------------------------------------------
 
     public String getDefaultTestWorkspace() {
         return System.getProperty("user.dir") + "/test-workspace";
     }
 
-    /**
-     * List all {@code .java} files under the workspace's source directories.
-     */
-    List<Path> listJavaFiles() {
-        if (currentWorkspaceRoot == null) {
-            return List.of();
-        }
-        PathMatcher matcher = Path.of(currentWorkspaceRoot).getFileSystem().getPathMatcher("glob:**.java");
-        List<Path> files = new ArrayList<>();
-        String[] sourceDirs = {
-            "src/main/java", "src/test/java", "src"
-        };
-        for (String dir : sourceDirs) {
-            Path srcDir = Path.of(currentWorkspaceRoot, dir);
-            if (Files.isDirectory(srcDir)) {
-                try (Stream<Path> walk = Files.walk(srcDir)) {
-                    walk.filter(Files::isRegularFile)
-                        .filter(matcher::matches)
-                        .forEach(files::add);
-                } catch (IOException e) {
-                    LOG.warning("Error scanning " + srcDir + ": " + e.getMessage());
-                }
-            }
-        }
-        return files;
+    // -------------------------------------------------------------------------
+    // LSP protocol helpers
+    // -------------------------------------------------------------------------
+
+    private CompletableFuture<String> sendInitializeRequest(String workspacePath) {
+        InitializeParams params = new InitializeParams();
+        params.setRootUri(new File(workspacePath).toURI().toString());
+        params.setRootPath(workspacePath);
+
+        ClientCapabilities capabilities = new ClientCapabilities();
+        capabilities.setTextDocument(new TextDocumentClientCapabilities());
+        WorkspaceClientCapabilities workspaceCaps = new WorkspaceClientCapabilities();
+        workspaceCaps.setApplyEdit(true);
+        capabilities.setWorkspace(workspaceCaps);
+        params.setCapabilities(capabilities);
+
+        return languageServer.initialize(params)
+                .thenApply(result -> {
+                    languageServer.initialized(new InitializedParams());
+                    ServerCapabilities caps = result.getCapabilities();
+                    return "LSP handshake complete. Text document sync: " + caps.getTextDocumentSync();
+                })
+                .exceptionally(e -> "LSP initialization error: " + e.getMessage());
     }
 
-    /**
-     * Resolve a file path that is either absolute or relative to the workspace.
-     */
-    Path resolveFilePath(String filePath) {
-        Path path = Path.of(filePath);
-        if (Files.isRegularFile(path)) {
-            return path;
+    // -------------------------------------------------------------------------
+    // JDTLS discovery helpers
+    // -------------------------------------------------------------------------
+
+    String findJdtlsHome() {
+        // 1. Explicitly configured path
+        if (jdtlsInstallPath.isPresent() && !jdtlsInstallPath.get().isBlank()) {
+            String path = jdtlsInstallPath.get();
+            if (new File(path).isDirectory()) {
+                return path;
+            }
+            LOG.warning("Configured jdtls.install.path does not exist: " + path);
         }
-        if (currentWorkspaceRoot != null) {
-            Path resolved = Path.of(currentWorkspaceRoot).resolve(filePath);
-            if (Files.isRegularFile(resolved)) {
-                return resolved;
+
+        // 2. 'jdtls' wrapper script on PATH → derive home from script location
+        try {
+            ProcessBuilder pb = new ProcessBuilder("which", "jdtls");
+            Process p = pb.start();
+            if (p.waitFor(5, TimeUnit.SECONDS) && p.exitValue() == 0) {
+                String scriptPath = new String(p.getInputStream().readAllBytes()).trim();
+                File scriptFile = new File(scriptPath).getCanonicalFile();
+                File binDir = scriptFile.getParentFile();
+                if (binDir != null && binDir.getName().equals("bin")) {
+                    return binDir.getParent();
+                }
+                if (binDir != null) {
+                    return binDir.getAbsolutePath();
+                }
+            }
+        } catch (Exception ignored) {
+        }
+
+        // 3. Common installation paths
+        String[] commonPaths = {
+            System.getProperty("user.home") + "/.local/share/jdtls",
+            "/usr/local/jdtls",
+            "/opt/jdtls"
+        };
+        for (String path : commonPaths) {
+            if (new File(path).isDirectory()) {
+                return path;
             }
         }
+
         return null;
+    }
+
+    Path findLauncherJar(String jdtlsHome) throws IOException {
+        Path pluginsDir = Paths.get(jdtlsHome, "plugins");
+        if (!Files.isDirectory(pluginsDir)) {
+            return null;
+        }
+        try (var stream = Files.find(pluginsDir, 1,
+                (path, attrs) -> path.getFileName().toString()
+                        .startsWith("org.eclipse.equinox.launcher_")
+                        && path.getFileName().toString().endsWith(".jar"))) {
+            return stream.findFirst().orElse(null);
+        }
+    }
+
+    Path findConfigDir(String jdtlsHome) {
+        String os = System.getProperty("os.name").toLowerCase();
+        String configDirName;
+        if (os.contains("mac") || os.contains("darwin")) {
+            configDirName = "config_mac";
+        } else if (os.contains("win")) {
+            configDirName = "config_win";
+        } else {
+            configDirName = "config_linux";
+        }
+        Path configDir = Paths.get(jdtlsHome, configDirName);
+        return Files.isDirectory(configDir) ? configDir : null;
+    }
+
+    List<String> buildJdtlsCommand(Path launcherJar, Path configDir, Path workspaceData) {
+        List<String> command = new ArrayList<>();
+        // Use the same java executable that is running this JVM
+        command.add(ProcessHandle.current().info().command().orElse("java"));
+        command.add("-Declipse.application=org.eclipse.jdt.ls.core.id1");
+        command.add("-Dosgi.bundles.defaultStartLevel=4");
+        command.add("-Declipse.product=org.eclipse.jdt.ls.core.product");
+        command.add("-Dlog.level=ALL");
+        command.add("-Xmx1G");
+        command.add("--add-modules=ALL-SYSTEM");
+        command.add("--add-opens");
+        command.add("java.base/java.util=ALL-UNNAMED");
+        command.add("--add-opens");
+        command.add("java.base/java.lang=ALL-UNNAMED");
+        command.add("-jar");
+        command.add(launcherJar.toString());
+        command.add("-configuration");
+        command.add(configDir.toString());
+        command.add("-data");
+        command.add(workspaceData.toString());
+        return command;
+    }
+
+    // -------------------------------------------------------------------------
+    // Lifecycle
+    // -------------------------------------------------------------------------
+
+    @PreDestroy
+    void cleanup() {
+        if (isConnected()) {
+            stopJdtls();
+        }
+    }
+
+    // -------------------------------------------------------------------------
+    // Language client implementation
+    // -------------------------------------------------------------------------
+
+    private static class SimpleLanguageClient implements LanguageClient {
+
+        @Override
+        public void telemetryEvent(Object object) {
+            // no-op
+        }
+
+        @Override
+        public void publishDiagnostics(PublishDiagnosticsParams diagnostics) {
+            LOG.info("Diagnostics for " + diagnostics.getUri() + ": "
+                    + diagnostics.getDiagnostics().size() + " issue(s)");
+        }
+
+        @Override
+        public void showMessage(MessageParams messageParams) {
+            LOG.info("jdtls: " + messageParams.getMessage());
+        }
+
+        @Override
+        public CompletableFuture<MessageActionItem> showMessageRequest(
+                ShowMessageRequestParams requestParams) {
+            return CompletableFuture.completedFuture(null);
+        }
+
+        @Override
+        public void logMessage(MessageParams message) {
+            LOG.fine("jdtls log: " + message.getMessage());
+        }
+
+        private static final Logger LOG =
+                Logger.getLogger(SimpleLanguageClient.class.getName());
     }
 }
